<resources>
    <string name="app_name">SantanderDevWeek</string>
    <string name="txt_saldo_disponivel">Saldo disponível</string>
    <string name="txt_saldo_limite">Saldo + Limite</string>
    <string name="txt_ver_extrato">Ver Extrato</string>
    <string name="txt_pagar">Pagar</string>
    <string name="txt_transferir">Transferir</string>
    <string name="txt_recarga">Recarga</string>
    <string name="txt_final_do_cartao">Final do Cartão</string>
</resources>