<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/app_name"
        app:titleTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/redPrimary"
        app:layout_constraintDimensionRatio="21:9"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    />

    <TextView
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@color/white"
        android:text="Olá, Cainan!"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
    />

    <TextView
        android:id="@+id/agencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:text="Ag 2021 "
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/user"
        app:layout_constraintStart_toStartOf="@id/user"
    />

    <TextView
        android:id="@+id/conta_corrente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:textColor="@color/white"
        android:text="cc 02222112-6"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/user"
        app:layout_constraintStart_toEndOf="@+id/agencia"
    />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_saldo"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/conta_corrente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_saldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:src="@drawable/ic_paid_black_24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
            />

            <TextView
                android:id="@+id/title_saldo_disponivel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/txt_saldo_disponivel"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="@id/img_saldo"
                app:layout_constraintLeft_toRightOf="@id/img_saldo"
                app:layout_constraintBottom_toBottomOf="@id/img_saldo"
            />

            <ImageView
                android:id="@+id/img_uparrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:src="@drawable/ic_expand_less_black_24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
            />

            <TextView
                android:id="@+id/saldo_disponivel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="R$ 1.500,00"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/title_saldo_disponivel"
                app:layout_constraintStart_toStartOf="@id/img_saldo"
            />

            <TextView
                android:id="@+id/texto_saldo_limite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/txt_saldo_limite"
                app:layout_constraintTop_toBottomOf="@id/saldo_disponivel"
                app:layout_constraintLeft_toLeftOf="@id/saldo_disponivel"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="R$ 3.000,00"
                app:layout_constraintTop_toTopOf="@id/texto_saldo_limite"
                app:layout_constraintStart_toEndOf="@id/texto_saldo_limite"
            />

            <View
                android:id="@+id/break_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@id/texto_saldo_limite"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_ver_extrato"
                android:textColor="@color/redSecundary"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/break_line"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
            />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_pagar"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_saldo"
    >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
        >

            <ImageView
                android:id="@+id/img_pagar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_payment_black_24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_pagar"
                app:layout_constraintTop_toBottomOf="@id/img_pagar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
            />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_transferir"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toEndOf="@id/card_pagar"
        app:layout_constraintTop_toBottomOf="@id/card_saldo"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ImageView
                android:id="@+id/img_transferir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_sync_alt_black_24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_transferir"
                app:layout_constraintTop_toBottomOf="@id/img_transferir"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_recarga"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toEndOf="@id/card_transferir"
        app:layout_constraintTop_toBottomOf="@id/card_saldo"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ImageView
                android:id="@+id/img_recarga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_smartphone_black_24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_recarga"
                app:layout_constraintTop_toBottomOf="@id/img_recarga"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/bg_final_do_cartao"
        android:layout_width="0"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:background="@color/redPrimary"
        app:layout_constraintTop_toBottomOf="@id/card_transferir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    />

    <TextView
        android:id="@+id/texto_final_do_cartao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:textColor="@color/white"
        android:text="@string/txt_final_do_cartao"
        app:layout_constraintTop_toTopOf="@id/bg_final_do_cartao"
        app:layout_constraintStart_toStartOf="@id/bg_final_do_cartao"
        app:layout_constraintBottom_toBottomOf="@id/bg_final_do_cartao"
    />

    <TextView
        android:id="@+id/final_do_cartao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="3366"
        app:layout_constraintTop_toTopOf="@id/bg_final_do_cartao"
        app:layout_constraintLeft_toRightOf="@id/texto_final_do_cartao"
        app:layout_constraintBottom_toBottomOf="@id/bg_final_do_cartao"
    />

    <ImageView
        android:id="@+id/downarrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:src="@drawable/ic_expand_more_white_24dp"
        app:layout_constraintRight_toRightOf="@id/bg_final_do_cartao"
        app:layout_constraintTop_toTopOf="@id/bg_final_do_cartao"
        app:layout_constraintBottom_toBottomOf="@id/bg_final_do_cartao"
    />

</androidx.constraintlayout.widget.ConstraintLayout>